# sop-katalog-basarnas

./: .db_push_error.txt  .diag_output.txt  .diag_result.json  .diag_result_utf8.json  .env.example  .error_details.json  .error_details_utf8.json  .final_test_post.txt  .gitignore  .job_check_result.json  .job_check_result_utf8.json  .job_details.json  .job_details_2_utf8.json  .job_details_4.json  .job_details_utf8.json  .temp_response.txt  DEPLOYMENT_FREE.md  GOOGLE_DRIVE_SETUP.md  api_result.xlsx  check-db.js  check-files-now.ts  check-files.ts  check-nomor.ts  check-paths.ts  check-session.ts  check-user.ts  dev-error.txt  dev-log.txt  fix-counter.ts  generate-pdf.js  google-apps-script-code.js  jobs.json  next.config.ts  package-lock.json  package.json  secret.txt  take-screenshots.js  temp-migration.json  temp-query.json  test-upload.ts  (+2 more)
cloudflare-worker/: package-lock.json  package.json  wrangler.toml
db/: custom.db
desktop/: gen.js  package.json  run-dev.bat
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/migrations/: 01_init.sql
desktop/src-tauri/src/: main.rs
docs/: EXCEL_EDIT_SYSTEM_DESIGN.md  R2_ONEDRIVE_BRIDGE.md
excel-mirror-engine/: README.md
prisma/: dev.db  rls_setup.sql  schema.local.prisma  schema.prisma  schema.prod.prisma  schema.production.prisma  schema.sqlite.prisma  seed.ts
public/: User_Manual_E-Katalog_SOP.md  version.txt
scripts/: export_to_pdf_f4.py  setup-oauth.ts  sync-to-drive.ts
src/: middleware.ts  proxy.ts
(+302 files in other folders)
